<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.github.IArch.GalleryFragment" >
    
    <item
        android:id="@+id/action_sync"
        android:title="@string/action_sync"
        android:orderInCategory="1"
        android:showAsAction="never"
        />
    
    <item
        android:id="@+id/action_export"
        android:title="@string/action_export_project"
        android:orderInCategory="2"
        android:showAsAction="never"
        />
    
    <item
        android:id="@+id/action_delete_project"
        android:title="@string/action_delete_project"
        android:orderInCategory="3"
        android:showAsAction="never"
        />

</menu>
