<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_tile"
    >

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.github.IArch.MainActivity$ImageDetailsFragment" 
    android:background="@drawable/background_tile"
    >

    <ImageView
    	android:id="@+id/imageViewID"
    	android:contentDescription="@string/image"
        android:layout_width="wrap_content"
    	android:layout_height="300dp" />
    
    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewID"
        android:layout_alignLeft="@+id/imageViewID"
        android:text="@string/date" 
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />


    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageViewID"
        android:layout_below="@+id/location_name"
        android:text="@string/gps"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
         />
    
    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageViewID"
        android:layout_below="@+id/latitude"
        android:text="@string/gps"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
         />

    <TextView
        android:id="@+id/project_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageViewID"
        android:layout_below="@+id/date"
        android:hint="@string/project_hint"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
         />
    
     <TextView
        android:id="@+id/location_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageViewID"
        android:layout_below="@+id/project_name"
        android:hint="@string/location_hint"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
     />
    
    <TextView
        android:id="@+id/artifact_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageViewID"
        android:layout_below="@+id/longitude"
        android:hint="@string/artifact_hint"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
         />

    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageViewID"
        android:layout_below="@+id/artifact_name"
        android:hint="@string/description_hint"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
         />

</RelativeLayout>
</ScrollView>
