<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.github.newiarch.TakePictureFragment">

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/image"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_alignLeft="@+id/imageView1"
        android:text="@string/date"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_alignLeft="@+id/imageView1"
        android:text="@string/gps"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latitude"
        android:layout_alignLeft="@+id/imageView1"
        android:text="@string/gps"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />

    <Spinner
        android:id="@+id/project_name"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_toLeftOf="@+id/new_project"
        android:layout_below="@+id/longitude"
        android:drawSelectorOnTop="true"
        android:prompt="@string/project_hint"
        style="@style/spinner_style"
        android:popupBackground="#000000"
        android:background="@drawable/text_border"
        android:textSize="22sp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />

    <ImageView
        android:id="@+id/project_arrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignRight="@+id/project_name"
        android:layout_alignBottom="@+id/project_name"
        android:src="@drawable/arrow"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:paddingBottom="6dp"
        android:paddingRight="4dp"
        />

    <Button
        android:id="@+id/new_project"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_below="@+id/longitude"
        android:layout_alignParentRight="true"
        android:text="@string/new_project"
        android:textColor="#FFFFFF"
        android:background="@drawable/new_project_button"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:onClick="newProject"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        />

    <EditText
        android:id="@+id/location_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/project_name"
        android:hint="@string/location_hint"
        android:textColorHint="#AAAAAA"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:background="@drawable/text_border"
        android:paddingLeft="10dp"
        android:textSize="22sp"
        android:textCursorDrawable="@drawable/cursor_style"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />

    <Spinner
        android:id="@+id/artifact_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/location_name"
        android:drawSelectorOnTop="true"
        android:prompt="@string/artifact_hint"
        style="@style/spinner_style"
        android:popupBackground="#000000"
        android:background="@drawable/text_border"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />

    <ImageView
        android:id="@+id/artifact_arrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignRight="@+id/artifact_name"
        android:layout_alignBottom="@+id/artifact_name"
        android:src="@drawable/arrow"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:paddingBottom="6dp"
        android:paddingRight="4dp"
        />

    <EditText
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/artifact_name"
        android:hint="@string/description_hint"
        android:textColorHint="#AAAAAA"
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        android:background="@drawable/text_border"
        android:paddingLeft="10dp"
        android:textSize="22sp"
        android:textCursorDrawable="@drawable/cursor_style"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />


    <Button
        android:id="@+id/sync"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/description"
        android:text="@string/sync"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_sub"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textSize="22sp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />

</FrameLayout>
