<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/background_tile"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="44sp"
        android:textStyle="bold"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="8"
        android:layout_marginTop="-8dp"
        />

    <Button
        android:id="@+id/map_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/camera_button"
        android:layout_marginTop="8dp"
        android:text="@string/map"
        android:background="@drawable/button_main"
        android:textColor="#FFFFFF"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textSize="22sp"
        android:onClick="displayMap"
        />

    <Button
        android:id="@+id/project_mgmt_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/map_button"
        android:layout_below="@+id/map_button"
        android:layout_marginTop="8dp"
        android:text="@string/project_management"
        android:background="@drawable/button_main"
        android:textColor="#FFFFFF"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textSize="22sp"
        android:onClick="gallery"
        />

    <Button
        android:id="@+id/link_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/project_mgmt_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_main"
        android:textColor="#FFFFFF"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textSize="22sp"
        android:text="@string/button_send" />

    <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/app_title"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="@drawable/button_round"
        android:gravity="center"
        android:onClick="takePicture"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:src="@drawable/camera_only"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/camera_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/camera_button"
        android:layout_alignRight="@+id/camera_button"
        android:layout_alignBottom="@+id/camera_button"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/camera"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="4"
        android:paddingBottom="20dp"
        />

</RelativeLayout>
